--- a/firststepinmilitary/package.json
+++ b/firststepinmilitary/package.json
@@ -14,6 +14,7 @@
     "react-lodash": "^0.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-search-autocomplete": "^5.2.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
